--- a/.github/workflows/blank.yaml
+++ b/.github/workflows/blank.yaml
@@ -6,9 +6,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '17'
-      - name: Install Ardrive
+      - name: Echo Ardrive
         run: |
           echo "Latest Ardrive installed"
