--- a/.github/workflows/blank.yaml
+++ b/.github/workflows/blank.yaml
@@ -10,7 +10,9 @@ jobs:
           npm install
           npm install ardrive-cli
       - name: Build
-        run: npm run build
+        run: |
+          cd build  
+          npm run build
       - name: Upload to Arweave
         run: |
           ardrive --help
