--- a/.github/workflows/blank.yaml
+++ b/.github/workflows/blank.yaml
@@ -15,6 +15,8 @@ jobs:
       - name: Build the static website
         run: |
          cd static-website
-         npm install
          npm run build
          ls
+      - name: Upload to Ardrive
+        run: |
+         ardrive --help
