--- a/.github/workflows/blank.yaml
+++ b/.github/workflows/blank.yaml
@@ -15,6 +15,7 @@ jobs:
         run: |
          cd static-website
          npm install
+         npm test
          npm run build
          ls
       - name: Upload to Ardrive
