--- a/.github/workflows/blank.yaml
+++ b/.github/workflows/blank.yaml
@@ -1,5 +1,8 @@
 name: Ardrive Workflow
 on: [push]
+env:
+  # Setting an environment variable with the value of a configuration variable
+  env_var: ${{ vars.ENV_CONTEXT_VAR }}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,6 +24,7 @@ jobs:
       - name: Upload to Ardrive
         run: |
          echo "Uploading to Ardrive....!"
+         echo "repository variable : $REPOSITORY_VAR"
         #  ardrive --help
       - name: Creating a Manifest
         run: |
