--- a/.github/workflows/blank.yaml
+++ b/.github/workflows/blank.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Upload to Ardrive
         run: |
          echo "Uploading to Ardrive....!"
-         echo "repository variable  ${{ vars.REPOSITORY_VAR }}""
+         echo "repository variable  ${{ vars.REPOSITORY_VAR }}"
         #  ardrive --help
       - name: Creating a Manifest
         run: |
