--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "main": "app.js",
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "@octokit/rest": "^20.0.1",
     "dotenv": "^16.3.1",
